# agent-test-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
docs/: agent37_notes.md  anthropic_marketplace_notes.md  competitive_scan.md
examples/: README.md  sample_langgraph_agent.py  sample_mcp_server.py
skills/agent-test-kit/: SKILL.md
skills/agent-test-kit/references/: flaky_root_causes.md  gap_report_rubric.md  test_generation_rubric.md
tests/: test_manifests.py  test_reference_integrity.py  test_skill_frontmatter.py
