[project]
name = "agent-test-kit"
version = "0.1.0"
description = "QA-grade testing toolkit for solo developers building agents (Claude Code skill)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
